--- a/style.scss
+++ b/style.scss
@@ -52,7 +52,7 @@ img {
 .headerabout p{
     font-family: 'Work Sans', sans-serif;
     color: #778390;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 16px;
     flex: 0 0 200px;
     align-self: start;
